2003-03-28  Gary Thomas  <gary@mlbassoc.com>

	* src/if_fec.c: Use new CPM/DPRAM buffer allocation scheme.  Also,
	better handling when aligning buffers to cache lines.	
	
2003-01-20  Gary Thomas  <gary@mlbassoc.com>

	* cdl/fec_eth_drivers.cdl: Increase number of allowed buffers.

2002-11-14  Gary Thomas  <gthomas@ecoscentric.com>

	* cdl/fec_eth_drivers.cdl: Increase default number of buffers (to a
	more reasonable amount).

2002-10-18  Gary Thomas  <gthomas@ecoscentric.com>

	* src/if_fec.c: Reduce warnings when PHY code is not used.

2002-10-11  Gary Thomas  <gthomas@ecoscentric.com> [inspired by]
2002-10-11  Wolfgang Heppner <hep@iis.fhg.de>	

	* src/if_fec.c: 
	* cdl/fec_eth_drivers.cdl: Make buffer descriptor use configurable.
	Also, fix some issues where cache state wasn't being honored.

2002-10-11  Gary Thomas  <gary@mlbassoc.com>

	* src/if_fec.c: 
	* cdl/fec_eth_drivers.cdl: Add control over PHY - when to reset
	and how to configure the link.

2002-09-19  Gary Thomas  <gary@mlbassoc.com>

	* src/if_fec.c (fec_eth_init): Check for availability of RedBoot
	FLASH support.

2002-09-03  Gary Thomas  <gary@mlbassoc.com>

	* src/if_fec.c: Make driver more generic - platform specifics are
	now contained in an include file CYGDAT_DEVS_FEC_ETH_INL.

2002-08-15  Gary Thomas  <gthomas@ecoscentric.com>

	* src/if_fec.c (fec_eth_send): 
	Clean up: remove unused variable _fec_eth_tx_count.

2002-08-08  Gary Thomas  <gthomas@ecoscentric.com>

	* src/if_fec.c (fec_eth_RxEvent): Cache needs to be invalidated
	to avoid any possible corruption.

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_fec.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2002-05-30  Jonathan Larmour  <jlarmour@redhat.com>

	* src/if_fec.c: Use CYGINT_IO_ETH_INT_SUPPORT_REQUIRED where
        appropriate.

2002-05-30  Jesper Skov  <jskov@redhat.com>
